--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^1.1.4
   google_sign_in: ^5.0.3
   provider: ^5.0.0
+  smooth_star_rating: 1.1.1
 
 dev_dependencies:
   flutter_test:
