--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_sign_in: ^5.0.3
   provider: ^5.0.0
   smooth_star_rating: 1.1.1
+  bottom_navy_bar: ^6.0.0
+
 
 dev_dependencies:
   flutter_test:
