--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^5.0.0
   smooth_star_rating: 1.1.1
   bottom_navy_bar: ^6.0.0
+  carousel_slider: ^4.0.0
 
 
 dev_dependencies:
