--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bottom_navy_bar: ^6.0.0
   carousel_slider: ^4.0.0
   image_picker_gallery_camera: ^0.2.2
+  google_fonts: ^2.1.0
 
 
 dev_dependencies:
