--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   carousel_slider: ^4.0.0
   image_picker_gallery_camera: ^0.2.2
   google_fonts: ^2.1.0
+  image_picker:
 
 
 dev_dependencies:
