--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.1.4
   google_sign_in: ^5.0.3
+  smooth_star_rating: ^1.1.1
   provider: ^5.0.0
-  smooth_star_rating: 1.1.1
   bottom_navy_bar: ^6.0.0
   carousel_slider: ^4.0.0
   image_picker_gallery_camera: ^0.2.2
