--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   image_picker_gallery_camera: ^0.2.2
   google_fonts: ^2.1.0
   image_picker:
+  flutter_secure_storage:
+  flutter_facebook_auth:
 
 
 dev_dependencies:
