--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,16 +42,28 @@ dependencies:
   carousel_slider: ^4.0.0
   image_picker_gallery_camera: ^0.2.2
   google_fonts: ^2.1.0
-  image_picker:
   flutter_secure_storage:
   flutter_facebook_auth:
+  cloud_firestore: ^3.1.4
   hexcolor: ^2.0.5
+  flutter_launcher_icons: "^0.9.2"
+  flutter_screenutil: ^5.0.1
+  auto_size_text: ^3.0.0
+  flutter_dropdown: ^1.0.0+hotfix.1
+  lottie: ^1.2.1
+  image_cropper: ^1.4.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/signinlogo.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -73,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/animations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -100,3 +113,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
