--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,14 +44,27 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_secure_storage:
   flutter_facebook_auth:
-  cloud_firestore: ^3.1.4
   hexcolor: ^2.0.5
   flutter_launcher_icons: "^0.9.2"
   flutter_screenutil: ^5.0.1
   auto_size_text: ^3.0.0
   flutter_dropdown: ^1.0.0+hotfix.1
   lottie: ^1.2.1
+  geolocator: ^7.4.0
+  geocoding: ^2.0.0
+  geoflutterfire: ^3.0.1
   image_cropper: ^1.4.1
+  cloud_firestore:
+  firebase_storage: '^10.2.3'
+  flutter_spinkit: ^5.1.0
+  data_connection_checker: ^0.3.4
+  fluttertoast: ^8.0.8
+  http: ^0.13.1
+  path_provider: ^2.0.0
+  cached_network_image: ^3.1.0
+  get: ^4.6.1
+  flutter_custom_dialog: ^1.2.0
+  multi_select_flutter: ^4.0.0
 
 
 dev_dependencies:
